[BugFix] Fix low-cardinality rewrite NPE caused by shared DecodeInfo (backport #68799) (#68890)
Signed-off-by: stephen <stephen5217@163.com>
Co-authored-by: stephen <91597003+stephen-shelby@users.noreply.github.com>
Co-authored-by: stephen <stephen5217@163.com>